assets/style.css
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Harmattan&display=swap");

#left-bar-headline {
  color: white;
  text-align: center;
  display: block;
}

#headline-sub {
  text-align: center;
  justify-content: center;
}

#main-window {
  position: absolute;
  width: 80%;
  height: 80%;
  display: block;
  background-color: whitesmoke;
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 3%;
  box-shadow: 10px 10px 20px 15px gray;
}

#inner-window {
  width: 96%;
  height: 90%;
  display: block;
  position: relative;
  margin-left: 2%;
  margin-right: 3%;
  margin-top: 2%;
  border-width: 5px;
  border-style: dashed;
  border-color: #0d6efd;
  border-radius: 10px;
}

h1 {
  text-align: center;
  direction: rtl;
  font-family: "Reem Kufi";
  margin-top: 3%;
  font-size: 300%;
}

h2 {
  font-family: "Harmattan";
  text-align: center;
  direction: rtl;
  color: rgb(78, 78, 78);
}

.card {
  background-color: whitesmoke;
  border-style: dashed;
  border-color: rgb(78, 78, 78);
  border-width: 2px;
}

#card-container {
  margin-top: 3%;
}

#input {
  width: 55%;
  height: 70%;
  display: block;
  position: absolute;
  margin-top: 1%;
  margin-left: 2%;
  border-style: dashed;
  border-color: rgb(78, 78, 78);
  border-width: 3px;
  border-radius: 10px;
}

#output {
  width: 35%;
  height: 70%;
  display: block;
  position: absolute;
  margin-top: 1%;
  margin-left: 62%;
  border-style: dashed;
  border-color: rgb(78, 78, 78);
  border-width: 3px;
  border-radius: 10px;
}
#output-plot {
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 2%;
  margin-bottom: 2%;
}

form button {
  padding-left: 2%;
  padding-right: 2%;
  padding-top: 1%;
  padding-bottom: 1%;
  background-color: rgb(78, 78, 78);
  color: white;
  border: none;
}

form {
  margin-top: 2%;
  margin-left: 2%;
  margin-bottom: 8%;
  font-family: "Reem Kufi";
}

hr {
  border-top: 3px solid rgb(78, 78, 78);
}

#info {
  margin-left: 2%;
  font-family: "Harmattan";
  font-size: larger;
}

#img {
  width: 90%;
  height: 90%;
}

.imgContainer {
  margin-left: 5%;
  margin-right: 5%;
  margin-top: 10%;
}

iframe {
  overflow: hidden;
  margin-left: 2%;
  margin-right: 2%;
  margin-top: 1%;
  margin-bottom: 2%;
}

.row {
    margin-bottom: 3%;
}

